Setting up the layout, needs fixes for when the screen shrinks and grows

--- a/SBA_307_HTML_and_CSS/projects.html
+++ b/SBA_307_HTML_and_CSS/projects.html
@@ -23,39 +23,24 @@
     <!-- Section 1 -->
     <div id="section1-container" class="container">
       <div id="section1-inner-container">
-        <div id="section1-box1">
-          <div id="section1-box1-imagebox">
-            <img src="./assets/pfp.jpeg" alt="" />
-          </div>
-
-          <div id="section1-box1-title">
-            <h1 id="name">Andres Figueroa</h1>
-            <h2 id="career">Web Developer</h2>
-          </div>
-        </div>
-
-        <div id="section1-box2">
-          <p class="plink">
-            <a class="plink" href="andresfigueroa@brandeis.edu">Email</a>
-          </p>
-          <p class="plink">
-            <a class="plink" href="https://www.linkedin.com/in/andresffigueroa/"
-              >LinkedIn</a
-            >
-          </p>
-          <p class="plink">
-            <a class="plink" href="https://github.com/andresfigueroa282"
-              >GitHub</a
-            >
-          </p>
-        </div>
-
-        <p id="section1-box3">
-          Computer Science student with hands-on experience in cybersecurity and
-          machine learning. Demonstrates strong technical skills and analytical
-          abilities. Proven adaptability and commitment to team success and
-          organizational goals.
-        </p>
+        <h1 class="projects-title">Projects</h1>
+        <table>
+          <tr>
+            <td style="width: 20%;">Legendary Pokémon Classifier</td>
+            <td style="width: 60%;">Developed a machine learning model to predict whether a Pokémon is legendary.</td>
+            <td style="width: 20%;"><a href="https://github.com/andresfigueroa282/Pokemon-Legendary-Classifier">GitHub</a></td>
+          </tr>
+          <tr>
+            <td>Predicting National Well-Being (Life Ladder Score)</td>
+            <td>Built a regression model using the World Happiness Report 2018 dataset.</td>
+            <td><a href="https://github.com/andresfigueroa282/My-eCornell-Portfolio">GitHub</a></td>
+          </tr>
+          <tr>
+            <td>Phishing Website Detection</td>
+            <td>Developed a binary classification model to detect phishing websites based on engineered URL features.</td>
+            <td><a href="https://github.com/andresfigueroa282/Phishing-Website-Detection-Project">GitHub</a></td>
+          </tr>
+        </table>
       </div>
     </div>
 
