Added forms to contact and added hovering animation

--- a/SBA_307_HTML_and_CSS/home.html
+++ b/SBA_307_HTML_and_CSS/home.html
@@ -36,7 +36,7 @@
 
         <div id="section1-box2">
           <p class="plink">
-            <a class="plink" href="andresfigueroa@brandeis.edu">Email</a>
+            <a class="plink" href="#">Email</a>
           </p>
           <p class="plink">
             <a class="plink" href="https://www.linkedin.com/in/andresffigueroa/"
