Added gifs and tried to format the forms

--- a/SBA_307_HTML_and_CSS/contact.html
+++ b/SBA_307_HTML_and_CSS/contact.html
@@ -27,6 +27,7 @@
     <!-- Section 1 -->
     <div id="section1-container" class="container">
       <div id="section1-inner-container">
+        <h1 class="contact-title">Contact  Me</h1>
         <div class="form-div">
           <form action="#">
             <h1 id="title">Email Me</h1>
@@ -52,7 +53,7 @@
           </form>
         </div>
 
-        <div class="form-div">
+        <div class="form-div-1">
           <form action="#">
             <h1 id="title">Text Me</h1>
 
