--- a/SBA_307_HTML_and_CSS/projects.html
+++ b/SBA_307_HTML_and_CSS/projects.html
@@ -24,21 +24,54 @@
     <div id="section1-container" class="container">
       <div id="section1-inner-container">
         <h1 class="projects-title">Projects</h1>
+        <div class="pokemon-div">
+          <img class="pokemon" src="./assets/gastly.gif" alt="gastly pokemon" />
+          <img class="pokemon" src="./assets/haunter.gif" alt="gastly pokemon"/>
+          <img class="pokemon" src="./assets/gengar.gif" alt="gengar pokemon" />
+        </div>
+
         <table>
           <tr>
-            <td style="width: 20%;">Legendary Pokémon Classifier</td>
-            <td style="width: 60%;">Developed a machine learning model to predict whether a Pokémon is legendary.</td>
-            <td style="width: 20%;"><a href="https://github.com/andresfigueroa282/Pokemon-Legendary-Classifier" class="github-link">GitHub</a></td>
+            <td style="width: 20%">Legendary Pokémon Classifier</td>
+            <td style="width: 60%">
+              Developed a machine learning model to predict whether a Pokémon is
+              legendary.
+            </td>
+            <td style="width: 20%">
+              <a
+                href="https://github.com/andresfigueroa282/Pokemon-Legendary-Classifier"
+                class="github-link"
+                >GitHub</a
+              >
+            </td>
           </tr>
           <tr>
             <td>Predicting National Well-Being (Life Ladder Score)</td>
-            <td>Built a regression model using the World Happiness Report 2018 dataset.</td>
-            <td><a href="https://github.com/andresfigueroa282/My-eCornell-Portfolio" class="github-link">GitHub</a></td>
+            <td>
+              Built a regression model using the World Happiness Report 2018
+              dataset.
+            </td>
+            <td>
+              <a
+                href="https://github.com/andresfigueroa282/My-eCornell-Portfolio"
+                class="github-link"
+                >GitHub</a
+              >
+            </td>
           </tr>
           <tr>
             <td>Phishing Website Detection</td>
-            <td>Developed a binary classification model to detect phishing websites based on engineered URL features.</td>
-            <td><a href="https://github.com/andresfigueroa282/Phishing-Website-Detection-Project" class="github-link">GitHub</a></td>
+            <td>
+              Developed a binary classification model to detect phishing
+              websites based on engineered URL features.
+            </td>
+            <td>
+              <a
+                href="https://github.com/andresfigueroa282/Phishing-Website-Detection-Project"
+                class="github-link"
+                >GitHub</a
+              >
+            </td>
           </tr>
         </table>
       </div>
